--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -1,4 +1,5 @@
 /****** Section A Propos ***********/
+
 .a_propos {
     padding: 2rem;
     text-align: center;
@@ -22,11 +23,9 @@ section {
 }
 
 /****** Bouton Explorer nos restaurants ***********/
-.a_propos__button {
+.app-button {
     border: 0;
-    padding: 0.75rem 1.5rem;
     font-weight: 500;
-    font-size: 1.1rem;
     border-radius: 100px;
     color: white;
     background-color: #686868;
@@ -34,4 +33,27 @@ section {
     cursor: pointer;
     transition-duration: 0.25s;
     box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.25);
+    height: 50px;
+}
+
+.app-button:hover {
+    background-color :rgba(255, 255, 255, 0.5);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.explore {
+    width: 58%;
+    font-size: 24px;
+}
+
+/* Le code ci-dessous correspond à la version desktop uniquement */
+
+/****** Media queries ***********/
+
+@media (min-width:768px) {
+
+    .a_propos__title{
+        font-size: 40px;
+}
+
 }
