--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,30 +1,62 @@
+/****** Section Header***********/
+
+
 
 /****** Encadré du logo ***********/
-.header {
+header{
     height: 79px;
     box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.25);
     z-index: 1000;
+
 }
 
 /****** Logo Ohmyfood ***********/
 .ohmyfood_logo {
-    font-family: "Shrikhand", "cursive";
-    font-weight: bold;
-    color: var(--blackcolor);
-    text-align: center;
-    justify-content: center;
+    width: 15rem;
+    height: 36px;
     padding-top: 20px;
 }
 
 /****** Lien du Logo ***********/
-.logo_link{
+.logo_link {
+    display: flex;
     border: none;
     text-decoration: none;
+    align-items: center;
+    justify-content: center;
 }
 
-img {
-    width: 52%;
-    height: 36px;
+/****** Flèche retour du header ***********/
+
+
+.header__restaurant {
+    position: relative;
+    height: 100%;
 }
+
+.header__previous {
+    position: absolute;
+    margin-left: 2rem;
+    padding-right: 3rem;
+    height: 2rem;
+    width: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.2rem;
+    color: black;
+    font-size: 20px;
+
+}
+
+.arrow{
+    display: block;
+    position:absolute;
+    top:50%;
+    transform: translateY(-50%);
+    width: 80px;
+    height: 32px;
+}
+
 
 
