--- a/assets/css/input.css
+++ b/assets/css/input.css
@@ -3,33 +3,41 @@
 .localisation {
     display: flex;
     justify-content: center;
-    text-align: center;
+    align-items: center;
     flex-direction: row;
-    height: 56.5px;
     background-color: var(--greycolor);
     height: 62.5px;
     position: relative;
 }
 
-form {
-    display: flex;
-    align-items: center;
-}
-
 /****** Champ de saisie de la ville ***********/
 
-input{
+form {
     display: flex;
-    text-align: center;
+    justify-content: center;
+    width: 100%;
+}
+
+input{
     border: none;
     background-color: var(--greycolor);
+    height:30px;
 }
 
 
 ::placeholder{
     margin: 0%;
     color: var(--blackcolor);
-    font-size: 16px;
-    font-weight: 500;
+    font-size: 1.2rem;
+    font-weight: 400;
+    padding-right: 5px;
+}
+
+
+/****** Logo de localisation ***********/
+.fa-location-dot{
+    font-weight: 700;
+    margin-right: 1rem;
+    font-size: 1.2rem;
 }
 
