--- a/assets/css/animation.css
+++ b/assets/css/animation.css
@@ -7,3 +7,23 @@
     }
 }
 
+@keyframes unfold {
+    0%{
+        transform:translateY(100%);
+        opacity:0;
+    }
+
+    100%{
+        transform: translateY(0);
+        opacity:1;
+    }
+}
+
+@keyframes loader {
+    0%{
+    transform: scale(1);
+}
+    100%{
+        transform: scale(0);
+    }
+}
