--- a/assets/css/restaurant.css
+++ b/assets/css/restaurant.css
@@ -101,7 +101,8 @@
     background-clip: text;
     -webkit-background-clip: text;
     color: transparent;
-    background-image: linear-gradient(red,blue);
+    background-image:linear-gradient(180deg, rgba(147, 86, 220, 1), rgba(255, 121, 218, 1) 70.71%),
+    linear-gradient(336deg, rgba(0,0,255,.8), rgba(0,0,255,0) 70.71%);
     opacity: 0;
     transition: all 200ms ease-in-out;
 }
