--- a/assets/css/animation.css
+++ b/assets/css/animation.css
@@ -21,9 +21,32 @@
 
 @keyframes loader {
     0%{
-    transform: scale(1);
+    height: auto;
 }
     100%{
-        transform: scale(0);
+        height: 0;
+    }
+}
+
+@keyframes animloader {
+    0% {
+      box-shadow: -38px -6px, -14px 6px,  14px -6px;
+    }
+    33% {
+      box-shadow: -38px 6px, -14px -6px,  14px 6px;
+    }
+    66% {
+      box-shadow: -38px -6px, -14px 6px, 14px -6px;
+    }
+    100% {
+      box-shadow: -38px 6px, -14px -6px, 14px 6px;
+    }
+  }
+
+  @keyframes hide {
+    to {
+        width:0;
+        height:0;
+        overflow:hidden;
     }
 }
