--- a/assets/css/fonctionnement.css
+++ b/assets/css/fonctionnement.css
@@ -5,6 +5,7 @@
     padding-left: 1rem;
     padding-bottom: 2rem;
     padding-right: 1rem;
+    background-color: var(--bodycolor);
 }
 
 /****** Titre Fonctionnement ***********/
