--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -1,7 +1,8 @@
 /****** Section A Propos ***********/
 
 .a_propos {
-    padding: 2rem;
+    padding-top: 39px;
+    padding-bottom: 57px;
     text-align: center;
     background-color: var(--backgroundcolor);
 }
@@ -16,10 +17,16 @@ section {
     margin: 0;
 }
 
+
 /****** Sous-titre A Propos ***********/
 .a_propos__subtitle{
     font-weight: 300;
-    margin: 1.5rem 0;
+    height: 46px;
+    width: 84%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin: 15px auto 0;
 }
 
 /****** Bouton Explorer nos restaurants ***********/
@@ -34,6 +41,8 @@ section {
     transition-duration: 0.25s;
     box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.25);
     height: 50px;
+    margin-top: 27px;
+    width: 58.13%;
 }
 
 .app-button:hover {
