--- a/assets/css/menu_restaurant.css
+++ b/assets/css/menu_restaurant.css
@@ -97,10 +97,18 @@
     cursor: pointer;
     max-width: 100%;
     padding: 15px;
+    padding-right: 0;
     gap: 5px;
     flex: 1 0 0;
     opacity: 0;
 }
+
+
+.menu-item:hover .menu-item__good {
+    margin-right: 0;
+}
+
+
 
 /****** Bouton coeur ***********/
 
@@ -194,15 +202,27 @@
     margin-right: -5rem;
     width: 5rem;
     height: 68.5px;
-    border-radius: 0 1rem 1rem 0;
+    border-radius: 0 0.75rem 0.75rem 0;
     padding: 0;
     margin-top: -15px;
     margin-bottom: -15px;
+    transition: all 0.5s;
+    display: flex;
 }
 
-.menu-item__good:hover{
-    margin-right: 0;
+/****** Logo check de la coche verte ***********/
+
+.menu-item__good i{
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--bodycolor);
+    font-size: 25px;
 }
+
+
+
 /****** Bouton commander ***********/
 
 .sectionbtn{
