Compilation du fichier style.css

--- a/assets/css/about.scss
+++ b/assets/css/about.scss
@@ -29,7 +29,7 @@ section {
     margin: 15px auto 0;
 }
 
-/****** Bouton Explorer nos restaurants ***********/
+/****** Bouton Explorer et Commander ***********/
 .app-button {
     border: 0;
     font-weight: 500;
