--- a/assets/css/menu_restaurant.scss
+++ b/assets/css/menu_restaurant.scss
@@ -210,6 +210,10 @@
     display: flex;
 }
 
+.menu-item:hover .menu-item__good {
+    margin-right: 0;
+})^`
+
 /****** Logo check de la coche verte ***********/
 
 .menu-item__good i {
